--- a/src/main/docker/docker-compose.yml
+++ b/src/main/docker/docker-compose.yml
@@ -1,9 +1,15 @@
 version: '3.8'
 services:
-  mongodb:
-    image: mongo:5.0.20
+  mariadb:
+    image: mariadb:10.7.1
+    # volumes:
+    #   - ~/volumes/mysql/:/var/lib/mysql/
+    environment:
+      - MYSQL_ALLOW_EMPTY_PASSWORD=yes
+      - MYSQL_DATABASE=zenwave-playground
     ports:
-      - '27017:27017'
+      - 127.0.0.1:3306:3306
+    command: mysqld --lower_case_table_names=1 --skip-ssl --character_set_server=utf8mb4 --explicit_defaults_for_timestamp
   kafka:
     image: bashj79/kafka-kraft
     ports:
