updates to user Avro with Spring Modulith TxOutbox

--- a/zenwave-jpa-example/src/main/resources/application-local.yml
+++ b/zenwave-jpa-example/src/main/resources/application-local.yml
@@ -14,4 +14,4 @@ DATASOURCE_URL: jdbc:postgresql://localhost:5432/app
 DATASOURCE_USERNAME: postgres
 DATASOURCE_PASSWORD: admin123
 KAFKA_BOOTSTRAP_SERVERS: localhost:9092
-
+SCHEMA_REGISTRY_URL: http://localhost:8081
