--- a/zenwave-jpa-example/src/main/resources/public/apis/asyncapi.yml
+++ b/zenwave-jpa-example/src/main/resources/public/apis/asyncapi.yml
@@ -33,7 +33,9 @@ components:
       traits:
         - $ref: '#/components/messageTraits/CommonHeaders'
       payload:
-        $ref: "#/components/schemas/CustomerEvent"
+        schemaFormat: application/vnd.apache.avro+json;version=1.9.0
+        schema:
+          $ref: "avro/CustomerEvent.avsc"
 
   messageTraits:
     CommonHeaders:
@@ -41,76 +43,9 @@ components:
         type: object
         properties:
           kafka_messageKey:
-            type: "integer"
-            format: "int64"
+            type: "long"
+            
             description: This header value will be populated automatically at runtime
             x-runtime-expression: $message.payload#/id
 
-  schemas:
-    CustomerEvent:
-      type: "object"
-      x-business-entity: "CustomerEvent"
-      required:
-      - "name"
-      - "email"
-      - "id"
-      properties:
-        name:
-          type: "string"
-          maxLength: 254
-          description: "Customer name"
-        email:
-          type: "string"
-          maxLength: 254
-          pattern: "^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,4}"
-          description: ""
-        addresses:
-          type: "array"
-          items:
-            $ref: "#/components/schemas/Address"
-            minLength: 1
-            maxLength: 5
-        id:
-          type: "integer"
-          format: "int64"
-        version:
-          type: "integer"
-          format: "int32"
-        paymentMethods:
-          type: "array"
-          items:
-            $ref: "#/components/schemas/PaymentMethod"
-    PaymentMethodType:
-      type: "string"
-      x-business-entity: "PaymentMethodType"
-      enum:
-      - "VISA"
-      - "MASTERCARD"
-    Address:
-      type: "object"
-      x-business-entity: "Address"
-      required:
-      - "street"
-      - "city"
-      properties:
-        street:
-          type: "string"
-          maxLength: 254
-        city:
-          type: "string"
-          maxLength: 254
-    PaymentMethod:
-      type: "object"
-      x-business-entity: "PaymentMethod"
-      required:
-      - "type"
-      - "cardNumber"
-      properties:
-        id:
-          type: "integer"
-          format: "int64"
-        type:
-          $ref: "#/components/schemas/PaymentMethodType"
-        cardNumber:
-          type: "string"
 
