--- a/zenwave-jpa-example/pom.xml
+++ b/zenwave-jpa-example/pom.xml
@@ -116,20 +116,20 @@
 			<version>${spring-cloud-stream-schema.version}</version>
 		</dependency>
 		<!-- avro -->
-<!--		<dependency>-->
-<!--			<groupId>org.apache.avro</groupId>-->
-<!--			<artifactId>avro</artifactId>-->
-<!--			<version>1.11.1</version>-->
-<!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>com.fasterxml.jackson.dataformat</groupId>-->
-<!--			<artifactId>jackson-dataformat-avro</artifactId>-->
-<!--		</dependency>-->
-<!--		<dependency>-->
-<!--			<groupId>io.confluent</groupId>-->
-<!--			<artifactId>kafka-avro-serializer</artifactId>-->
-<!--			<version>5.3.0</version>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>org.apache.avro</groupId>
+			<artifactId>avro</artifactId>
+			<version>1.11.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.dataformat</groupId>
+			<artifactId>jackson-dataformat-avro</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.confluent</groupId>
+			<artifactId>kafka-avro-serializer</artifactId>
+			<version>5.3.0</version>
+		</dependency>
 		<!-- spring modulith -->
 		<dependency>
 			<groupId>org.springframework.modulith</groupId>
@@ -417,22 +417,22 @@
 						</configuration>
 						<executions>
 							<!-- DTOs -->
-							<execution>
-								<id>generate-asyncapi-dtos</id>
-								<phase>generate-sources</phase>
-								<goals>
-									<goal>generate</goal>
-								</goals>
-								<configuration>
-									<generatorName>jsonschema2pojo</generatorName>
-									<configOptions>
-										<modelPackage>${asyncApiModelPackage}</modelPackage>
-										<jsonschema2pojo.isUseJakartaValidation>true</jsonschema2pojo.isUseJakartaValidation>
-										<jsonschema2pojo.useLongIntegers>true</jsonschema2pojo.useLongIntegers>
-										<jsonschema2pojo.includeAdditionalProperties>true</jsonschema2pojo.includeAdditionalProperties>
-									</configOptions>
-								</configuration>
-							</execution>
+<!--							<execution>-->
+<!--								<id>generate-asyncapi-dtos</id>-->
+<!--								<phase>generate-sources</phase>-->
+<!--								<goals>-->
+<!--									<goal>generate</goal>-->
+<!--								</goals>-->
+<!--								<configuration>-->
+<!--									<generatorName>jsonschema2pojo</generatorName>-->
+<!--									<configOptions>-->
+<!--										<modelPackage>${asyncApiModelPackage}</modelPackage>-->
+<!--										<jsonschema2pojo.isUseJakartaValidation>true</jsonschema2pojo.isUseJakartaValidation>-->
+<!--										<jsonschema2pojo.useLongIntegers>true</jsonschema2pojo.useLongIntegers>-->
+<!--										<jsonschema2pojo.includeAdditionalProperties>true</jsonschema2pojo.includeAdditionalProperties>-->
+<!--									</configOptions>-->
+<!--								</configuration>-->
+<!--							</execution>-->
 							<!-- Generate PROVIDER -->
 							<execution>
 								<id>generate-asyncapi</id>
@@ -468,28 +468,28 @@
 						</dependencies>
 					</plugin>
 					<!-- Other plugins -->
-<!--					<plugin>-->
-<!--						<groupId>org.apache.avro</groupId>-->
-<!--						<artifactId>avro-maven-plugin</artifactId>-->
-<!--						<version>1.11.1</version>-->
-<!--						<executions>-->
-<!--							<execution>-->
-<!--								<goals>-->
-<!--									<goal>schema</goal>-->
-<!--								</goals>-->
-<!--								<phase>generate-sources</phase>-->
-<!--							</execution>-->
-<!--						</executions>-->
-<!--						<configuration>-->
-<!--							<sourceDirectory>${project.basedir}/src/main/resources/public/apis/avro</sourceDirectory>-->
-<!--							<outputDirectory>${project.basedir}/target/generated-sources/avro</outputDirectory>-->
-<!--							<imports>-->
-<!--								<import>${project.basedir}/src/main/resources/public/apis/avro/PaymentMethodType.avsc</import>-->
-<!--								<import>${project.basedir}/src/main/resources/public/apis/avro/PaymentMethod.avsc</import>-->
-<!--								<import>${project.basedir}/src/main/resources/public/apis/avro/Address.avsc</import>-->
-<!--							</imports>-->
-<!--						</configuration>-->
-<!--					</plugin>-->
+					<plugin>
+						<groupId>org.apache.avro</groupId>
+						<artifactId>avro-maven-plugin</artifactId>
+						<version>1.11.1</version>
+						<executions>
+							<execution>
+								<goals>
+									<goal>schema</goal>
+								</goals>
+								<phase>generate-sources</phase>
+							</execution>
+						</executions>
+						<configuration>
+							<sourceDirectory>${project.basedir}/src/main/resources/public/apis/avro</sourceDirectory>
+							<outputDirectory>${project.basedir}/target/generated-sources/avro</outputDirectory>
+							<imports>
+								<import>${project.basedir}/src/main/resources/public/apis/avro/PaymentMethodType.avsc</import>
+								<import>${project.basedir}/src/main/resources/public/apis/avro/PaymentMethod.avsc</import>
+								<import>${project.basedir}/src/main/resources/public/apis/avro/Address.avsc</import>
+							</imports>
+						</configuration>
+					</plugin>
 				</plugins>
 			</build>
 		</profile>
