--- a/zenwave-jpa-example/src/main/resources/application.yml
+++ b/zenwave-jpa-example/src/main/resources/application.yml
@@ -37,10 +37,16 @@ spring:
         useServerPrepStmts: true
   kafka:
     bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS}
+    properties:
+      specific.avro.reader: true
+      schema.registry.url: ${SCHEMA_REGISTRY_URL}
     producer:
+      auto.register.schemas: true
       key-serializer: org.apache.kafka.common.serialization.LongSerializer
+      value-serializer: io.confluent.kafka.serializers.KafkaAvroSerializer
     consumer:
       key-deserializer: org.apache.kafka.common.serialization.LongDeserializer
+      value-deserializer: io.confluent.kafka.serializers.KafkaAvroDeserializer
   cloud:
     stream:
       kafka.binder.enable-observation: true
@@ -48,4 +54,7 @@ spring:
         definition: on-customer-event;
       bindings:
         on-customer-event-out-0:
-          destination: customer.events
+          destination: customer.events.avro
+          content-type: application/*+avro
+          producer:
+            use-native-encoding: true
