--- a/zenwave-jpa-example/src/main/resources/public/apis/asyncapi.yml
+++ b/zenwave-jpa-example/src/main/resources/public/apis/asyncapi.yml
@@ -12,11 +12,19 @@ channels:
   CustomersChannel:
     address: "customers"
     messages:
+      CustomerDeletedEventMessage:
+        $ref: '#/components/messages/CustomerDeletedEventMessage'
       CustomerEventMessage:
         $ref: '#/components/messages/CustomerEventMessage'
 
 operations:
   onCustomerEvent:
+    action: send
+    tags:
+      - name: Customer
+    channel:
+      $ref: '#/channels/CustomersChannel'
+  onCustomerDeletedEvent:
     action: send
     tags:
       - name: Customer
@@ -36,6 +44,16 @@ components:
         schemaFormat: application/vnd.apache.avro+json;version=1.9.0
         schema:
           $ref: "avro/CustomerEvent.avsc"
+    CustomerDeletedEventMessage:
+      name: CustomerDeletedEventMessage
+      title: ""
+      summary: ""
+      traits:
+        - $ref: '#/components/messageTraits/CommonHeaders'
+      payload:
+        schemaFormat: application/vnd.apache.avro+json;version=1.9.0
+        schema:
+          $ref: "avro/CustomerDeletedEvent.avsc"
 
   messageTraits:
     CommonHeaders:
