--- a/zenwave-jpa-baseline/pom.xml
+++ b/zenwave-jpa-baseline/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.3.1</version> <!-- lookup parent from repository -->
+		<version>3.5.0</version> <!-- lookup parent from repository -->
 	</parent>
 
 	<groupId>io.zenwave360.example</groupId>
@@ -15,7 +15,7 @@
 
 
 	<properties>
-		<java.version>17</java.version>
+		<java.version>21</java.version>
 
 		<basePackage>io.zenwave360.example</basePackage>
 		<openApiApiPackage>${basePackage}.adapters.web</openApiApiPackage>
@@ -25,18 +25,19 @@
 		<asyncApiConsumerApiPackage>${basePackage}.adapters.commands</asyncApiConsumerApiPackage>
 
 		<spring-boot.version>${project.parent.version}</spring-boot.version>
-		<spring-cloud.version>2022.0.4</spring-cloud.version>
+		<spring-cloud.version>2025.0.0</spring-cloud.version>
 		<spring-cloud-stream-schema.version>2.2.1.RELEASE</spring-cloud-stream-schema.version>
 
-		<zenwave.version>1.6.0</zenwave.version>
+		<zenwave.version>2.0.2</zenwave.version>
 
-		<jakarta.validation-api.version>3.1.0</jakarta.validation-api.version>
-		<mapstruct.version>1.5.5.Final</mapstruct.version>
+		<jakarta.validation-api.version>3.1.1</jakarta.validation-api.version>
+		<mapstruct.version>1.6.3</mapstruct.version>
 		<lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
 		<karate.version>1.4.1</karate.version>
-		<archunit-junit5.version>1.3.0</archunit-junit5.version>
-		<springdoc-openapi-starter-webmvc-ui.version>2.5.0</springdoc-openapi-starter-webmvc-ui.version>
-		<spring-javaformat-maven-plugin.version>0.0.42</spring-javaformat-maven-plugin.version>
+		<archunit-junit5.version>1.4.0</archunit-junit5.version>
+		<springdoc-openapi-starter-webmvc-ui.version>2.8.3</springdoc-openapi-starter-webmvc-ui.version>
+		<spotless-maven-plugin.version>2.44.3</spotless-maven-plugin.version>
+		<palantir-java-format.version>2.55.0</palantir-java-format.version>
 	</properties>
 
 	<dependencyManagement>
@@ -182,9 +183,18 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>io.spring.javaformat</groupId>
-				<artifactId>spring-javaformat-maven-plugin</artifactId>
-				<version>${spring-javaformat-maven-plugin.version}</version>
+				<groupId>com.diffplug.spotless</groupId>
+				<artifactId>spotless-maven-plugin</artifactId>
+				<version>${spotless-maven-plugin.version}</version>
+				<configuration>
+					<java>
+						<palantirJavaFormat>
+							<version>${palantir-java-format.version}</version>
+							<style>PALANTIR</style>
+							<formatJavadoc>false</formatJavadoc>
+						</palantirJavaFormat>
+					</java>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.jacoco</groupId>
@@ -215,7 +225,7 @@
 			<plugin>
 				<groupId>org.openapitools</groupId>
 				<artifactId>openapi-generator-maven-plugin</artifactId>
-				<version>7.8.0</version>
+				<version>7.12.0</version>
 				<executions>
 					<execution>
 						<goals>
@@ -238,7 +248,7 @@
 								<useSpringBoot3>true</useSpringBoot3>
 								<documentationProvider>none</documentationProvider>
 								<openApiNullable>false</openApiNullable>
-								<useOptional>true</useOptional>
+								<useOptional>false</useOptional>
 								<useTags>true</useTags>
 								<interfaceOnly>true</interfaceOnly>
 								<skipDefaultInterface>true</skipDefaultInterface>
@@ -302,7 +312,7 @@
 			<build>
 				<plugins>
 					<plugin>
-						<groupId>io.github.zenwave360.zenwave-sdk</groupId>
+						<groupId>io.zenwave360.sdk</groupId>
 						<artifactId>zenwave-sdk-maven-plugin</artifactId>
 						<version>${zenwave.version}</version>
 						<configuration>
@@ -350,12 +360,12 @@
 						</executions>
 						<dependencies>
 							<dependency>
-								<groupId>io.github.zenwave360.zenwave-sdk.plugins</groupId>
+								<groupId>io.zenwave360.sdk.plugins</groupId>
 								<artifactId>asyncapi-spring-cloud-streams3</artifactId>
 								<version>${zenwave.version}</version>
 							</dependency>
 							<dependency>
-								<groupId>io.github.zenwave360.zenwave-sdk.plugins</groupId>
+								<groupId>io.zenwave360.sdk.plugins</groupId>
 								<artifactId>asyncapi-jsonschema2pojo</artifactId>
 								<version>${zenwave.version}</version>
 							</dependency>
