--- a/examples/customer-address-jpa/pom.xml
+++ b/examples/customer-address-jpa/pom.xml
@@ -356,11 +356,12 @@
 								<useSpringBoot3>true</useSpringBoot3>
 								<documentationProvider>none</documentationProvider>
 								<openApiNullable>false</openApiNullable>
-								<useOptional>true</useOptional>
+								<useOptional>false</useOptional>
 								<useTags>true</useTags>
 								<interfaceOnly>true</interfaceOnly>
 								<skipDefaultInterface>true</skipDefaultInterface>
 								<delegatePattern>false</delegatePattern>
+								<sortParamsByRequiredFlag>false</sortParamsByRequiredFlag>
 							</configOptions>
 						</configuration>
 					</execution>
