--- a/examples/asyncapi/apis/asyncapi-json.yml
+++ b/examples/asyncapi/apis/asyncapi-json.yml
@@ -101,7 +101,7 @@ components:
           format: "int64"
 
     Address:
-      type: "object"
+      type: object
       x-business-entity: "Address"
       required:
         - "street"
