--- a/examples/customer-address-jpa/src/main/resources/public/apis/asyncapi.yml
+++ b/examples/customer-address-jpa/src/main/resources/public/apis/asyncapi.yml
@@ -43,7 +43,7 @@ components:
       payload:
         schemaFormat: application/vnd.apache.avro+json;version=1.9.0
         schema:
-          $ref: "avro/CustomerEvent.avsc"
+          $ref: "./avro/CustomerEvent.avsc"
     CustomerDeletedEventMessage:
       name: CustomerDeletedEventMessage
       title: ""
@@ -53,7 +53,7 @@ components:
       payload:
         schemaFormat: application/vnd.apache.avro+json;version=1.9.0
         schema:
-          $ref: "avro/CustomerDeletedEvent.avsc"
+          $ref: "./avro/CustomerDeletedEvent.avsc"
 
   messageTraits:
     CommonHeaders:
@@ -61,8 +61,7 @@ components:
         type: object
         properties:
           kafka_messageKey:
-            type: "long"
-            
+            type: "integer"
             description: This header value will be populated automatically at runtime
             x-runtime-expression: $message.payload#/id
 
