--- a/examples/asyncapi-shopping-cart/shopping-cart/pom.xml
+++ b/examples/asyncapi-shopping-cart/shopping-cart/pom.xml
@@ -23,6 +23,7 @@
         <asyncapi.avro.imports>
             ${asyncapiPrefix}/avro/
         </asyncapi.avro.imports>
+        <zenwave.asyncapiGenerator.templates>SpringKafka</zenwave.asyncapiGenerator.templates>
 
 		<asyncApiProducerApiPackage>${basePackage}.events</asyncApiProducerApiPackage>
 		<asyncApiConsumerApiPackage>${basePackage}.commands</asyncApiConsumerApiPackage>
@@ -51,6 +52,12 @@
                     <skip>false</skip>
                     <addCompileSourceRoot>true</addCompileSourceRoot>
                     <addTestCompileSourceRoot>true</addTestCompileSourceRoot>
+                    <!-- <authentication>-->
+                    <!--    <authentication>-->
+                    <!--        <key>API_KEY</key>-->
+                    <!--        <value>XXX</value>-->
+                    <!--    </authentication>-->
+                    <!-- </authentication>-->
                 </configuration>
                 <executions>
                     <execution>
@@ -63,8 +70,8 @@
                             <generatorName>AsyncAPIGenerator</generatorName>
                             <configOptions>
                                 <role>provider</role>
-                                <templates>SpringKafka</templates>
-                                <!-- required for json, here it uses avro package <modelPackage>${asyncApiModelPackage}</modelPackage>-->
+                                <templates>${zenwave.asyncapiGenerator.templates}</templates>
+                                <!-- <modelPackage>${asyncApiModelPackage}</modelPackage> required for json-schema, here it uses avro package -->
                                 <producerApiPackage>${asyncApiProducerApiPackage}</producerApiPackage>
                                 <consumerApiPackage>${asyncApiConsumerApiPackage}</consumerApiPackage>
                                 <avroCompilerProperties.imports>${asyncapi.avro.imports}</avroCompilerProperties.imports>
@@ -172,16 +179,21 @@
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		<!-- kafka -->
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-stream-kafka</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-stream-schema</artifactId>
-			<version>${spring-cloud-stream-schema.version}</version>
-		</dependency>
+        <!-- spring-cloud-stream -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-stream-kafka</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-stream-schema</artifactId>
+            <version>${spring-cloud-stream-schema.version}</version>
+        </dependency>
+        <!-- kafka -->
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
         <!-- avro -->
         <dependency>
             <groupId>org.apache.avro</groupId>
