--- a/examples/asyncapi-shopping-cart/pom.xml
+++ b/examples/asyncapi-shopping-cart/pom.xml
@@ -31,6 +31,7 @@
 
         <jakarta.validation-api.version>3.1.1</jakarta.validation-api.version>
         <mapstruct.version>1.6.3</mapstruct.version>
+        <lombok.version>1.18.42</lombok.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
         <karate.version>1.4.1</karate.version>
         <archunit-junit5.version>1.4.0</archunit-junit5.version>
@@ -63,5 +64,31 @@
         <module>shopping-cart</module>
         <module>client</module>
     </modules>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.14.0</version>
+                    <configuration>
+                        <annotationProcessorPaths><!-- required for java 25 -->
+                            <path>
+                                <groupId>org.projectlombok</groupId>
+                                <artifactId>lombok</artifactId>
+                                <version>${lombok.version}</version>
+                            </path>
+                            <path>
+                                <groupId>org.mapstruct</groupId>
+                                <artifactId>mapstruct-processor</artifactId>
+                                <version>${mapstruct.version}</version>
+                            </path>
+                        </annotationProcessorPaths>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 
 </project>
