--- a/examples/asyncapi-shopping-cart/pom.xml
+++ b/examples/asyncapi-shopping-cart/pom.xml
@@ -22,7 +22,7 @@
     <properties>
         <java.version>21</java.version>
 
-        <zenwave.version>2.2.0-SNAPSHOT</zenwave.version>
+        <zenwave.version>2.2.0</zenwave.version>
 
         <spring-boot.version>${project.parent.version}</spring-boot.version>
         <spring-cloud.version>2025.0.0</spring-cloud.version>
