--- a/examples/asyncapi-shopping-cart/apis/pom.xml
+++ b/examples/asyncapi-shopping-cart/apis/pom.xml
@@ -52,6 +52,32 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>io.apicurio</groupId>
+                <artifactId>apicurio-registry-maven-plugin</artifactId>
+                <version>3.1.2</version>
+                <configuration>
+                    <registryUrl>http://localhost:8080/apis/registry/v3</registryUrl>
+                    <artifacts>
+                        <artifact>
+                            <groupId>${project.groupId}</groupId>
+                            <artifactId>${project.artifactId}</artifactId>
+                            <artifactType>ASYNCAPI</artifactType>
+                            <file>${project.basedir}/asyncapi.yml</file>
+                            <ifExists>FIND_OR_CREATE_VERSION</ifExists>
+                            <canonicalize>true</canonicalize>
+                            <autoRefs>true</autoRefs>
+                        </artifact>
+                    </artifacts>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>register</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 </project>
