--- a/zenwave-jpa-baseline/src/main/resources/application.yml
+++ b/zenwave-jpa-baseline/src/main/resources/application.yml
@@ -36,9 +36,9 @@ spring:
   kafka:
     bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS}
     producer:
-      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      key-serializer: org.apache.kafka.common.serialization.LongSerializer
     consumer:
-      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      key-deserializer: org.apache.kafka.common.serialization.LongDeserializer
   cloud:
     stream:
       kafka.binder.enable-observation: true
